Add authorization to aichat swagger
